--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 	text-transform: none;
 
 	background-color: #8ea99a;
-	background-image: url("img/fon-1.jpg");
 	background-position: top center;
 	background-repeat: no-repeat;
 }
@@ -58,7 +57,7 @@ a {
     list-style: none;
 
     background-color: #f8f7f4;
-    background-image: url("img/sub.jpg");
+    background-image: url("../img/sub.jpg");
     background-repeat: repeat;
 }
 
@@ -113,6 +112,16 @@ a {
 	color: #000000;
 }
 
+.free-sweets_1 {
+	background-color: #984361;
+	background-image: url("../img/raspberry.png");
+}
+
+.free-sweets_2 {
+	background-color: #735959;
+	background-image: url("../img/chocofon.png");
+}
+
 .features-list {
 	list-style: none;
 }
@@ -125,7 +134,7 @@ a {
 	color: #000000;
 
 	background-color: #eee3c7;
-	background-image: url("img/waffle.jpg");
+	background-image: url("../img/waffle.jpg");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
@@ -138,6 +147,7 @@ a {
 .banner {
 	color: #ffffff;
 	background-color: #8ea99a;
+	background-image: url("../img/banner.png");
 }
 
 .banner h3 {
@@ -149,7 +159,7 @@ a {
 	color: #000000;
 
 	background-color: #f8f7f4;
-	background-image: url("img/mail-1.jpg");
+	background-image: url("../img/mail.jpg");
 	background-position: 0 0;
 	background-repeat: no-repeat;
 }
@@ -217,7 +227,7 @@ a {
 	color: #323232;
 
 	background-color: #f8f7f4;
-	background-image: url("img/pattern-1.jpg");
+	background-image: url("../img/pattern-1.jpg");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
@@ -226,7 +236,7 @@ a {
 	color: #323232;
 
 	background-color: #fefefe;
-	background-image: url("img/pattern.jpg");
+	background-image: url("../img/pattern.jpg");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
@@ -311,12 +321,6 @@ a {
 .filters .filters_filter-1 .sort option {
 	background-color: #ffffff;
 }
-
-/*не вижу пока решения, как сделать фон
-.filters .filters_filter-2 input {
-	background-color: rgba(255, 255, 255, 0.2);
-}
-*/
 
 .filters ul {
 	list-style: none;
@@ -424,22 +428,209 @@ a {
 	color: #ffbc9e;
 }
 
+.main-header {
+	width: 100%;
 
-
-
-
-/*.banner h1 {
-	font-family: "Roboto", sans-serif;
-	font-size: 60px;
-	line-height: 24px;
-	color: #ffffff;
-	font-weight: bold;
+	/*margin-bottom: 130px;*/
 }
 
-.free-sweets h2 {
-    font-family: "Roboto", sans-serif;
-	font-size: 18px;
-	line-height: 24px;
-	color: #323232;
-	font-weight: bold;
- }*/
+.main-navigation {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.container {
+	width: 1150px;
+	margin: 0 auto;
+	padding: 0 30px;
+}
+
+.main-navigation .container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.main-header_logo {
+	width: 154px;
+	height: 64px;
+}
+
+.site-nav {
+	width: 600px;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.user-nav {
+	width: 320px;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.container_other {
+	width: 190px;
+	margin-left: auto;
+	margin-right: 30px;
+	padding: 0 30px;
+}
+
+.main-navigation .container_other {
+	display: flex;
+}
+
+.container_banners {
+	display: flex;
+	align-items: center;
+}
+
+.container_banners .banner_1 {
+	display: flex;
+}
+
+.banner_1 {
+	width: 650px;
+	height: 585px;
+}
+
+.pag-sliders {
+	display: flex;
+	align-items: left;
+}
+
+.sliders-switchers {
+	margin: 0;
+	padding: 0;
+	margin-left: 30px;
+
+	list-style: none;
+}
+
+.free-sweets {
+	display: flex;
+	justify-content: space-between;
+	padding: 20px 0;
+	margin-left: 30px;
+}
+
+.free-sweets_1 {
+	width: 560px;
+	margin-right: 25px;
+}
+
+.free-sweets_2 {
+	width: 560px;
+}
+
+.list {
+	width: 1150px;
+}
+
+.list_items {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 35px;
+
+	list-style: none;
+}
+
+.list_item {
+	width: 270px;
+	margin-right: 20px;
+}
+
+.list_item:nth-child(4n) {
+	margin-right: 0;
+}
+
+.feautures {
+	display: flex;
+	width: 1145px;
+	justify-content: space-between;
+	padding: 20px;
+}
+
+.features_text {
+	padding-left: 20px;
+}
+
+.features_items_1,
+.features_items_2 {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	
+	list-style: none;
+}
+
+.features_item {
+	width: 540px;
+	margin-right: 25px;
+	padding-left: 20px;
+}
+
+.banners {
+	display: flex;
+	justify-content: space-between;
+	padding: 20px 0;
+	margin-bottom: 30px;
+}
+
+.banners .banner {
+	width: 560px;
+	margin-right: 25px;
+}
+
+.banners .subscript {
+	width: 560px;
+}
+
+.map {
+	display: flex;
+	align-items: center;
+	width: 1200px
+	height: 430px;
+}
+
+.footer-wrapper .container {
+	display: flex;
+}
+
+.footer-sc {
+	width: 200px;
+	margin-right: 210px;
+}
+
+.footer-other {
+	width: 335px;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+}
+
+.footer-copyright {
+	width: 190px;
+	margin-left: 220px;
+}
+
+.filters {
+	display: flex;
+	flex-direction: column;
+	padding: 0;
+	margin: 0;
+	margin-bottom: 25px;
+	
+	list-style: none;
+}
+
+.filters .block1 {
+	width: 880px;
+}	
+
